colors theme - minor css fix for topmenu to remove horizonal scrollbars webtrees & xenia redo css for topmenu to remove horizonal scrollbars webtrees & xenia add css to correctly position icon on 're-order families' menu option fab & webtrees remove horizontal scrollbars on pedigree chart pedigree.php temporary fix to remove duplicate scrollbars on chrome, pending proper fix by Google

--- a/themes/colors/css-1.5.3/css/colors.css
+++ b/themes/colors/css-1.5.3/css/colors.css
@@ -369,8 +369,8 @@ span.title {
 	width: 100%;
 }
 
-[dir=rtl] #main-menu {
-	padding-right: 16px;
+[dir=rtl] #main-menu > li {
+	margin: 4px 16px 0 0;
 }
 
 [dir=rtl] #main-menu li {
